fix(Nodes): fix version column overflow

--- a/src/containers/Storage/PaginatedStorageGroupsTable/columns/StorageGroupsColumns.scss
+++ b/src/containers/Storage/PaginatedStorageGroupsTable/columns/StorageGroupsColumns.scss
@@ -7,10 +7,6 @@
     }
 
     &__pool-name-wrapper {
-        overflow: hidden;
-
-        white-space: nowrap;
-        text-overflow: ellipsis;
         direction: rtl;
     }
 
